# ion

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark_bun.js  benchmark_comparison.js  benchmark_deno.js  benchmark_fs.js  benchmark_node.js  ion  test.js  test_utils.js
.github/: dependabot.yml
.github/workflows/: ci.yml  ecosystem_compat_test.yml  node_compat_test.yml  pr.yml  release.yml
doc/: fs.md  fs_bench.md
examples/fs/: README.md  copyFileSync.js  fileSize.js  mkdirSync.js  readDirSync.js  readFileSync.js  readInto.js  readTextFileSync.js  removeSync.js  renameSync.js  truncateSync.js  writeFileSync.js  writeTextFileSync.js
src/: lib.rs  main.rs
src/js/: fs.js
src/ops/: fs.rs
tests/: bun.js  ion.js  node.js
tests/js/: fs.bench.js  fs.start.js  fs.stress.js  fs.test.js  fs_ops.bench.js  fs_ops.test.js
tests/js/utils/: combined.js  fs.js  test-print.js  test-time.js
tests/phase-1/: README.md  deno.js  ion.js
tests/rs/op/: Cargo.toml  main.rs
tools/: README.md  lint.js
